# any-llm

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  results.txt  test_exception.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yaml  stale.yml  tests-docs.yaml  tests-integration.yaml  tests-unit.yaml
api/completion/: index.html
api/embedding/: index.html
api/exceptions/: index.html
api/list_models/: index.html
api/responses/: index.html
demos/chat/: .gitignore  README.md
demos/chat/backend/: main.py  pyproject.toml
demos/chat/frontend/: package-lock.json  package.json
demos/chat/frontend/public/: index.html
demos/chat/frontend/src/: App.css  App.tsx  api.ts  types.ts
docs/: index.md  providers.md  quickstart.md
docs/api/: completion.md  embedding.md  exceptions.md  helpers.md  list_models.md  responses.md
providers/: index.html
quickstart/: index.html
scripts/: hooks.py  run-mypy.sh  wake_up_hf_endpoint.py
search/: search_index.json
src/any_llm/: __init__.py  api.py  exceptions.py  logging.py  main.py  provider.py  tools.py
src/any_llm/providers/: base_framework.py  helpers.py
src/any_llm/providers/anthropic/: __init__.py  anthropic.py  utils.py
src/any_llm/providers/aws/: __init__.py  aws.py  utils.py
src/any_llm/providers/azure/: __init__.py  azure.py  utils.py
src/any_llm/providers/azureopenai/: __init__.py  azureopenai.py
src/any_llm/providers/cerebras/: __init__.py  cerebras.py  utils.py
src/any_llm/providers/cohere/: __init__.py  cohere.py  utils.py
src/any_llm/providers/databricks/: __init__.py  databricks.py
src/any_llm/providers/deepseek/: __init__.py  deepseek.py  utils.py
src/any_llm/providers/fireworks/: __init__.py  fireworks.py  utils.py
src/any_llm/providers/google/: __init__.py  google.py  utils.py
src/any_llm/providers/groq/: __init__.py  groq.py  utils.py
src/any_llm/providers/huggingface/: __init__.py  huggingface.py  utils.py
src/any_llm/providers/inception/: __init__.py  inception.py
src/any_llm/providers/llama/: __init__.py  llama.py  utils.py
src/any_llm/providers/llamacpp/: __init__.py  llamacpp.py
src/any_llm/providers/llamafile/: __init__.py  llamafile.py
src/any_llm/providers/lmstudio/: __init__.py  lmstudio.py
src/any_llm/providers/mistral/: mistral.py  utils.py
src/any_llm/providers/moonshot/: __init__.py  moonshot.py
src/any_llm/providers/nebius/: __init__.py  nebius.py
src/any_llm/providers/ollama/: __init__.py  ollama.py  utils.py
src/any_llm/providers/openai/: __init__.py  base.py  openai.py  utils.py
src/any_llm/providers/openrouter/: __init__.py  openrouter.py
src/any_llm/providers/perplexity/: __init__.py  perplexity.py
src/any_llm/providers/portkey/: __init__.py  portkey.py
src/any_llm/providers/sambanova/: __init__.py  sambanova.py
src/any_llm/providers/together/: __init__.py  together.py  utils.py
src/any_llm/providers/voyage/: __init__.py  utils.py  voyage.py
src/any_llm/providers/watsonx/: __init__.py  utils.py  watsonx.py
src/any_llm/providers/xai/: __init__.py  utils.py  xai.py
src/any_llm/types/: completion.py  model.py  provider.py  responses.py
src/any_llm/utils/: __init__.py  aio.py  api.py  instructor.py  message.py  message_converter.py  provider.py
src/llm_squid/: __init__.py  client.py  main.py  message.py  message_converter.py  provider.py  tools.py
src/llm_squid/mistral/: mistral.py
src/llm_squid/providers/mistral/: __init__.py  mistral.py
src/llm_squid/providers/ollama/: ollama.py
src/llm_squid/utils/: __init__.py  message_converter.py  provider.py
tests/: conftest.py  constants.py
tests/docs/: test_all.py
tests/integration/: test_completion.py  test_embedding.py  test_list_models.py  test_models.py  test_reasoning.py  test_response_format.py  test_responses.py  test_streaming.py  test_tool.py
tests/unit/: test_api_config.py  test_api_signature.py  test_aws_provider.py  test_completion.py  test_embedding.py  test_message_utils.py  test_model_syntax.py  test_provider.py  test_provider_pyproject_options.py  test_responses.py  test_tools.py
tests/unit/providers/: test_anthropic_provider.py  test_aws_provider.py  test_azure_provider.py  test_cerebras_provider.py  test_cohere_provider.py  test_fireworks_provider.py  test_google_provider.py  test_google_utils.py  test_groq_provider.py  test_huggingface_provider.py  test_llamafile.py  test_mistral_provider.py  test_openai_base_provider.py  test_perplexity_provider.py  test_watsonx_provider.py  test_xai.py  test_xai_provider.py
