[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "any-llm"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "pydantic",
  "openai",
  "rich",
]

[project.optional-dependencies]

all = [
  "any-llm[mistral,ollama,openai]"
]

mistral = [
  "mistralai",
]

ollama = [
  "httpx",
]

openai = [
  # OpenAI is already in base dependencies, but this maintains consistency
  "openai",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/any-llm/"
Issues = "https://github.com/mozilla-ai/any-llm/issues"
Source = "https://github.com/mozilla-ai/any-llm"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",
]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false # mypy gets confused by pytest decorators

[[tool.mypy.overrides]]
module = ["pytest", "mktestdocs", "pytest_lazy_fixtures", "syrupy.assertion"]
ignore_missing_imports = true # pytest related modules are not found

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "tests" },
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocs-include-markdown-plugin>=7.1.5",
]


lint = [
  "pre-commit==4.2.0",
  "pre-commit-uv==4.1.4",
]

tests = [
  "pytest>=8,<9",
  "mktestdocs>=0.2.4",
]

# For completeness, but 'uv sync --group dev' currently installs the others too.
all = [
  { include-group = "lint" },
  { include-group = "tests" },
  { include-group = "docs" },
]
